# udacity-finding-donors-project

./: .gitignore  Makefile  README.md  finding_donors-final.html  pyproject.toml
docs/: model-selection.md
scripts/: compare_configs.py
src/data/: loader.py  preprocessing.py
src/evaluation/: curves.py  metrics.py
src/features/: importance.py
src/models/: training.py  tuning.py
starter/: finding_donors-final.html  finding_donors.ipynb
tests/: conftest.py  test_evaluation.py  test_features.py  test_loader.py  test_preprocessing.py  test_training.py
