[project]
name = "finding-donors"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "matplotlib",
    "jupyter",
    "ipython",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]
kaggle = ["optuna", "shap"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["N803", "N806"]  # Allow sklearn-conventional X_train/X_test naming

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
